kubernetes/addons/security/kyverno/policies/inject-timezone.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-timezone
  annotations:
    policies.kyverno.io/title: Inject timezone
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects an initContainer to Pods and setup TZ
      environment variable so the container will have the correct
      time.
spec:
  rules:
    - name: inject-timezone
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              annotations:
                kyverno-no-tz: "true"
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - name: provide-timezone
                image: quay.io/k8tz/k8tz:0.19.0@sha256:a94d72b49ba0dc653f6a033663c6d63b64a50638a4cc3814072e6f3a50ec5218
                imagePullPolicy: IfNotPresent
                resources:
                  requests:
                    cpu: 10m
                    memory: 100Mi
                volumeMounts:
                  - mountPath: /mnt/zoneinfo
                    name: timezone
                args:
                  - bootstrap
            containers:
              - (name): "*"
                volumeMounts:
                  - mountPath: /etc/localtime
                    name: timezone
                    readOnly: true
                    subPath: &timezone Europe/Madrid
                  - mountPath: /usr/share/zoneinfo
                    name: timezone
                    readOnly: true
                env:
                  - name: TZ
                    value: *timezone
            volumes:
              - name: timezone
                emptyDir: {}
